--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   ],
   "scripts": {
     "start": "npm run start --workspace examples/astris",
-    "build": "npm run build --workspace packages/core",
-    "test": "npm run test --workspace packages/core"
+    "build": "npm run build --workspace packages/helios-core",
+    "test": "npm run test --workspace packages/helios-core"
   },
   "devDependencies": {
     "pnpm": "10.0.0"
