--- a/examples/astris/package.json
+++ b/examples/astris/package.json
@@ -5,12 +5,13 @@
     "dev": "vite"
   },
   "dependencies": {
-    "core": "*",
-    "editor": "*"
+    "@merlinn/helios-core": "workspace:*"
   },
   "devDependencies": {
+    "@merlinn/helios-editor": "workspace:*",
     "@types/node": "^22.15.17",
     "path": "^0.12.7",
-    "vite": "^2.9.18"
+    "vite": "6.3.4",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
