--- a/packages/helios-editor/package.json
+++ b/packages/helios-editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "editor",
+  "name": "@merlinn/helios-editor",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,7 +12,7 @@
     "vue": "^3.2.0"
   },
   "devDependencies": {
-    "vite": "^2.6.0",
+    "vite": "6.3.4",
     "typescript": "^4.5.0"
   },
   "publishConfig": {
