--- a/examples/astris/package.json
+++ b/examples/astris/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@merlinn/helios-core": "workspace:*",
-    "@merlinn/helios-three-plugin": "workspace:*"
+    "@merlinn/helios-three-plugin": "workspace:*",
+    "bitecs": "^0.3.40"
   },
   "devDependencies": {
     "@merlinn/helios-editor": "workspace:*",
