--- a/packages/helios-three-plugin/package.json
+++ b/packages/helios-three-plugin/package.json
@@ -23,6 +23,11 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
+    },
+    "./components": {
+      "import": "./dist/components/index.js",
+      "require": "./dist/components/index.cjs",
+      "types": "./dist/components/index.d.ts"
     }
   }
 }
