--- a/packages/helios-editor/package.json
+++ b/packages/helios-editor/package.json
@@ -4,9 +4,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc",
+    "watch": "tsc --watch"
   },
   "dependencies": {
     "vue": "^3.2.0"
