--- a/packages/helios-core/tsconfig.json
+++ b/packages/helios-core/tsconfig.json
@@ -1,14 +1,8 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "composite": true,
-    "declaration": true,
     "outDir": "dist",
-    "rootDir": "src",
-    "module": "ESNext",
-    "target": "ESNext",
-    "moduleResolution": "Node",
-    "strict": true,
-    "esModuleInterop": true
+    "rootDir": "src"
   },
   "include": ["src"]
 }
