--- a/packages/helios-three-plugin/package.json
+++ b/packages/helios-three-plugin/package.json
@@ -1,33 +1,9 @@
 {
   "name": "@merlinn/helios-three-plugin",
-  "version": "1.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch"
-  },
+  "version": "0.0.1",
+  "main": "src/index.ts",
   "dependencies": {
     "@merlinn/helios-core": "workspace:*",
     "three": "^0.176.0"
-  },
-  "devDependencies": {
-    "@types/three": "^0.176.0",
-    "typescript": "^4.5.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    },
-    "./components": {
-      "import": "./dist/components/index.js",
-      "require": "./dist/components/index.cjs",
-      "types": "./dist/components/index.d.ts"
-    }
   }
 }
