--- a/packages/helios-three-plugin/package.json
+++ b/packages/helios-three-plugin/package.json
@@ -5,5 +5,8 @@
   "dependencies": {
     "@merlinn/helios-core": "workspace:*",
     "three": "^0.176.0"
+  },
+  "devDependencies": {
+    "@types/three": "^0.176.0"
   }
 }
